# internal/modules/user/dto/get_user_by_username.dto.go
@@ -1,0 +1,19 @@
+package userdtos
+
+type GetUserByUsernameRes struct {
+	Username       string   `json:"username"`
+	Bio            *string  `json:"bio"`
+	AvatarURL      *string  `json:"avatar_url"`
+	FollowerCount  int64    `json:"follower_count"`
+	FollowingCount int64    `json:"following_count"`
+	Tweets         []Tweets `json:"tweets"`
+}
+
+type Tweets struct {
+	ID           int64    `json:"id"`
+	Content      string   `json:"content"`
+	Tags         []string `json:"tags"`
+	LikeCount    int64    `json:"like_count"`
+	DislikeCount int64    `json:"dislike_count"`
+	CreatedAt    string   `json:"created_at"`
+}
